# event-sourcing-ledger-api

./: .gitignore  README.md  REQUIREMENTS.md  dump.rdb  process-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
app/: main.py  models.py  schemas.py
app/core/: auth.py  database.py  exceptions.py  logging_config.py
app/middleware/: logging_middleware.py
app/services/: auth_service.py  user_service.py
